Fix inputs on ios

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -46,6 +46,11 @@ a:focus-visible {
   outline-offset: 1px;
 }
 
+textarea,
+input {
+  -webkit-appearance: none;
+}
+
 @layer base {
   input::placeholder {
     @apply text-gray-400;
